# o-complex

./: .env-dev  README.md  alembic.ini  docker-compose.yml  dockerfile  pyproject.toml
app/: main.py  main_test.py
app/api/: dependencies.py  router.py  schemas.py  weatherapi.py
app/core/: settings.py
app/dao/: database.py  db_methods.py  models.py
app/migration/: env.py
app/migration/versions/: 11f3ead85ec1_add_session_id.py  fbd11149e1ad_initial_revision.py
app/static/: cities.js  russian-cities.js  script.js  style.css  weather-api.js
app/templates/: index.html
