[project]
name = "o-complex"
version = "0.1.0"
description = ""
authors = [
    {name = "Aleksey Panin",email = "lllrikitikilll@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard] (>=0.115.12,<0.116.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
